# PhysicsEngine

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: ci.yml
cmake/: AddCatch2.cmake  AddSFML.cmake
src/: CMakeLists.txt
src/app/: Application.cpp  Application.hpp
src/application/: application.cpp  application.h
src/collision/: BoxCollider.cpp  BoxCollider.hpp  CircleCollider.hpp  Collider.hpp  CollisionManager.hpp  SphereCollider.cpp  SphereCollider.hpp
src/core/: Force.hpp  Integrator.hpp  RigidBody.cpp  RigidBody.hpp
src/engine/: engine.cpp  engine.h
src/force/: force.cpp  force.h  particleForce.cpp  particleForce.h
src/game/: balistic.cpp  balistic.h  game.h
src/graphics/: CircleRenderer.hpp  RectangleRenderer.hpp  Renderer.hpp
src/integrator/: integrator.cpp  integrator.h  integrator.hpp
src/maths/: Vector3.cpp  Vector3.hpp
src/particle/: particle.cpp  particle.h
src/physics/: BoxCollider.cpp  BoxCollider.hpp  Collider.hpp  CollisionManager.hpp  Force.cpp  Force.hpp  Integrator.hpp  PhysicsConstants.hpp  RigidBody.cpp  RigidBody.hpp  SphereCollider.cpp  SphereCollider.hpp
src/scenes/: BalisticScene.cpp  BalisticScene.hpp  BalldropScene.cpp  BalldropScene.hpp  Scene.hpp
src/vector3/: vector3.cpp  vector3.h
test/: CMakeLists.txt  test_vector3.cpp
